--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
-
+<h1>
+  Welcome to my personal page! 
+</h1>
 <!-- Insert comments here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
-<p>
-  David made a change
-</p>
+
+  <p>It is still under cunstruction so please check back soon! </p>
+
 
 </body>
 </html>
