--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+<!-- Hi friend looking at my source code. This website is still a work in progress. 
+This is my first attempt at building a personal website. -->
 
-<body>
+<html lang="en">
+  <head>
+    <title>David Garcia | Electrical Engineer &amp; Product Manager</title>
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <LINK href="styles.css" rel="stylesheet" type="text/css">
+  </head>
 
-<img src="forkit.gif" id="octocat" alt="" />
-<h1>
-  Welcome to my personal page! 
-</h1>
-<!-- Insert comments here -->
-
-  <p>It is still under cunstruction so please check back soon! </p>
+  <body>
 
 
-</body>
+    <h1>Welcome to my personal page! </h1>
+
+    <p>It is still under cunstruction so please check back soon! </p>
+
+
+  </body>
 </html>
